<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:tint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/app_font"
            android:gravity="center"
            android:text="@string/tv_confirm_add_mark_header" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/app_bold_font"
            android:gravity="center"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNo"
                style="@style/btn_alert_neg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_no"
                android:textColor="@color/colorError" />

            <Button
                android:id="@+id/btnYes"
                style="@style/btn_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_yes" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>