<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/userPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/app_font"
                    android:text="@string/tv_welcome_back"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvGet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:elevation="15dp"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorPrimaryVariant"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                app:iiv_color="@color/white"
                                app:iiv_icon="faw-search" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Get Route"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvCreate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:elevation="15dp"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorPrimaryVariant"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                app:iiv_color="@color/white"
                                app:iiv_icon="faw-plus" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Create Route"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/app_bold_font"
            android:text="@string/tv_latest_routes" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <co.ke.jamboapps.roadtrip.custom.EmptyRecyclerView
                android:id="@+id/rvItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <LinearLayout
                android:id="@+id/emptyListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_checklist"
                    app:tint="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/app_font"
                    android:text="@string/tv_empty_list"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->
    <!--    <Button-->
    <!--        android:id="@+id/btnStart"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Start" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnStop"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Stop" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnNav"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Navigate" />-->

</LinearLayout>